# apollo-claude

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  SETUP.md  apollotech-otel-headers.sh  install-apollo-claude-wrapper.sh  install-safe-bash-hook.sh  install-statusline.sh  install.sh  install_collector.sh  install_otel.sh  recommended-settings.json  safe-bash-patterns.json  setup-apollotech-otel-for-claude.sh
collector/: docker-compose.yml  loki-config.yaml  nginx-site.conf  otel-collector-config.yaml  prometheus.yml
collector/grafana/provisioning/dashboards/: claude-code-dashboard.json  claude-code-engagement.json  claude-code-health.json  claude-code-models.json  claude-code-tools.json  claude-code-user.json
hooks/safe-bash/: Cargo.toml  build.sh  test.sh
hooks/safe-bash/src/: autoupdate.rs  config.rs  main.rs  patterns.rs
hooks/safe-bash/tests/: integration.rs
tests/: test-config-parsing.sh  test-download-validation.sh  test-lib.sh  test-otel-headers.sh  test-platform-detection.sh  test-remote-patterns.sh  test-repo-url-normalization.sh  test-settings-json-merge.sh  test-statusline-formatters.sh  test-version-gte.sh  test-wrapper-functions.sh
