[package]
name = "safe-bash-hook"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "safe-bash-hook"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
